# rsasa

./: Cargo.toml  LICENSE-MIT  PYTHON_SETUP.md  README.md  TESTING.md  pyproject.toml  pytest.ini  sasa.rs
.github/workflows/: test.yml
examples/: simple.rs
python/: README.md  example.py
python/rsasa/: __init__.py
python/tests/: README.md  test_basic.py  test_comparison_mdtraj.py
src/: lib.rs
