[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rsasa"
version = "0.1.0"
description = "Fast SASA (Solvent Accessible Surface Area) calculator for molecular structures"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["sasa", "molecular", "chemistry", "surface-area", "computational-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "mdtraj>=1.9.4",
]
dev = [
    "pytest>=7.0",
    "mdtraj>=1.9.4",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rsasa"
Repository = "https://github.com/yourusername/rsasa"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "rsasa"
